--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-  "name": "no-name",
-  "license": "UNLICENSED",
   "vaadin": {
     "dependencies": {
-      "lit-element": "^2.2.1",
+      "lit-element": "2.4.0",
       "@polymer/polymer": "3.2.0",
       "@webcomponents/webcomponentsjs": "^2.2.10"
     },
@@ -14,28 +12,30 @@
       "raw-loader": "3.1.0",
       "webpack-cli": "3.3.11",
       "webpack": "4.42.0",
-      "chokidar": "^3.4.0",
+      "ts-loader": "8.0.12",
+      "chokidar": "^3.5.0",
       "webpack-merge": "4.2.2",
+      "typescript": "4.0.3",
       "webpack-dev-server": "3.11.0"
     },
     "hash": ""
   },
   "dependencies": {
-    "@collaborne/polymer-password-strength": "^4.0.0",
-    "@polymer/polymer": "^3.4.1",
-    "@webcomponents/webcomponentsjs": "^2.2.10",
-    "lit-element": "^2.2.1",
-    "zxcvbn": "^4.4.2"
+    "lit-element": "2.4.0",
+    "@polymer/polymer": "3.2.0",
+    "@webcomponents/webcomponentsjs": "^2.2.10"
   },
   "devDependencies": {
-    "chokidar": "^3.4.0",
-    "compression-webpack-plugin": "4.0.1",
-    "copy-webpack-plugin": "5.1.2",
-    "raw-loader": "3.1.0",
-    "webpack": "4.42.0",
     "webpack-babel-multi-target-plugin": "2.3.3",
+    "copy-webpack-plugin": "5.1.2",
+    "compression-webpack-plugin": "4.0.1",
+    "raw-loader": "3.1.0",
     "webpack-cli": "3.3.11",
-    "webpack-dev-server": "3.11.0",
-    "webpack-merge": "4.2.2"
+    "webpack": "4.42.0",
+    "ts-loader": "8.0.12",
+    "chokidar": "^3.5.0",
+    "webpack-merge": "4.2.2",
+    "typescript": "4.0.3",
+    "webpack-dev-server": "3.11.0"
   }
 }
